--- a/Admin/src/app/blog-management/blog-management.component.html
+++ b/Admin/src/app/blog-management/blog-management.component.html
@@ -51,7 +51,7 @@
               <div class="table-action">
                 <fa-icon (click)="actionUpdate(1)" [icon]="faEdit" class="edit-icon"
                     [style]="{cursor: 'pointer'}" size="lg"></fa-icon>
-                <fa-icon (click)="deleteBlog(_id.value) [icon]="faDelete" class="delete-icon" [style]="{cursor: 'pointer'}"
+                <fa-icon (click)="deleteBlog(_id.value)" [icon]="faDelete" class="delete-icon" [style]="{cursor: 'pointer'}"
                     size="lg"></fa-icon>
             </div>
             </td>
@@ -100,7 +100,7 @@
         <div class="row mb-3">
             <label for="Title" class="col-sm-3 col-form-label">Tiêu đề</label>
             <div class="col-sm-9">
-                <input type="text" class="form-control" name="Title" id="Title" placeholder="Nhập tiêu đề" [(ngModel)]="blog.Title>
+                <input type="text" class="form-control" name="Title" id="Title" placeholder="Nhập tiêu đề" [(ngModel)]="blog.Title">
             </div>
         </div>
         <div class="row mb-3">
