--- a/Admin/src/app/blog-management/blog-management.component.html
+++ b/Admin/src/app/blog-management/blog-management.component.html
@@ -51,7 +51,7 @@
               <div class="table-action">
                 <fa-icon (click)="actionUpdate(1)" [icon]="faEdit" class="edit-icon"
                     [style]="{cursor: 'pointer'}" size="lg"></fa-icon>
-                <fa-icon (click)="deleteBlog(_id.value)" [icon]="faDelete" class="delete-icon" [style]="{cursor: 'pointer'}"
+                <fa-icon (click)="deleteBlog(blog._id.value)" [icon]="faDelete" class="delete-icon" [style]="{cursor: 'pointer'}"
                     size="lg"></fa-icon>
             </div>
             </td>
