--- a/Admin/src/app/quan-ly-don-hang/quan-ly-don-hang.component.html
+++ b/Admin/src/app/quan-ly-don-hang/quan-ly-don-hang.component.html
@@ -1,66 +1,69 @@
 <h1>Quản lý đơn hàng</h1>
 <h4>Tất cả đơn hàng</h4>
 <hr>
-<div class="tren">
-  <div class="btn">
-    <button>Sắp xếp theo</button>
-  </div>
-  <div class="search">
-    <form class="inputSearch" onsubmit="submitForm(event)">
-      <input type="text" class="search" id="inputvalue" placeholder="Tìm kiếm">
-      <button class="ti-search"><img src="assets/searchicon.png" width="30px" height="20px"></button>
-  </form>
+<div class="container">
+  <div>
+    <div class="row">
+      <div class="header-box">
+        <h1>Danh Sách Đơn Hàng</h1>
+    </div>
+    </div>
+    <hr>
+    <div class="d-flex justify-content-between">
+      <div class="sort-function">
+        <select class="form-select">
+          <option *ngFor="let orderstatus of orderstatuss">  {{ orderstatus}}</option>
+
+        </select>
+      </div>
+
+      <div class="search-box">
+        <form class="d-flex">
+          <button (click)="SearchOrderStatus(orderstatus)" class="btn btn-outline-success" stype="submit"><i class="fa fa-search"></i></button>
+        </form>
+      </div>
+    </div>
+
+    <footer><div class="display-list mt-3">
+      <table class="table text-center table-hover">
+        <thead>
+          <tr >
+            <th></th>
+            <th>Mã đơn hàng</th>
+            <th>Ngày đặt</th>
+            <th>Ngày Giao</th>
+            <th>Trạng thái</th>
+            <th>Tổng tiền</th>
+            <th>Tùy chỉnh</th>
+          </tr>
+        </thead>
+        <tbody>
+          <ng-container *ngFor="let p of orders">
+            <tr>
+              <td><input type="checkbox" name="all" id="all" checked></td>
+                <td>{{p._id}}</td>
+                <td>{{p.OrderDate}}</td>
+                <td>{{p.DeliveryTime}}</td>
+                <td>{{p.OrderStatus}}</td>
+                <td>{{p.SubTotal}}</td>
+              <td class="d-flex justify-content-end" >
+                <div class="table-action">
+                  <a href="./quanlydonhangchitiet"><fa-icon  [icon]="faEdit" class="edit-icon"
+                    [style]="{cursor: 'pointer'}" size="lg"></fa-icon></a>
+                  <fa-icon [icon]="faDelete" class="delete-icon" [style]="{cursor: 'pointer'}"
+                      size="lg"></fa-icon>
+              </div>
+              </td>
+            </tr>
+          </ng-container>
+
+        </tbody>
+      </table>
+    </div></footer>
   </div>
 </div>
-<div class="main">
-  <table>
-    <tr class="tieude">
-      <td></td>
-      <td>Mã đơn hàng</td>
-      <td>Ngày đặt</td>
-      <td>Khách Hàng</td>
-      <td>Trạng thái</td>
-      <td>Tổng tiền</td>
-      <td>Tùy chỉnh</td>
-    </tr>
-    <tr>
-      <td><input type="checkbox" name="all" id="all" checked></td>
-      <td><div><span>SO100001</span></div></td>
-      <td>24/04/2023</td>
-      <td>0912345678</td>
-      <td><div class="trangthai" style="border:solid black 1px;">Chờ xác nhận</div></td>
-      <td>390.000 VNĐ</td>
-      <td><a href="#"><img src="assets/editiconpng.png" width="30px"></a></td>
-    </tr>
-    <tr>
-      <td><input type="checkbox" name="all" id="all" checked></td>
-      <td><div><span>SO100002</span></div></td>
-      <td>19/03/2023</td>
-      <td>0912345678</td>
-      <td><div class="trangthai" style="border:solid black 1px;">Chờ đóng gói</div></td>
-      <td>390.000 VNĐ</td>
-      <td><a href="#"><img src="assets/editiconpng.png" width="30px"></a></td>
-    </tr>
-    <tr>
-      <td><input type="checkbox" name="all" id="all" checked></td>
-      <td><div><span>SO100003</span></div></td>
-      <td>10/02/2023</td>
-      <td>0912345678</td>
-      <td><div class="trangthai" style="border:solid black 1px;">Chờ đóng gói</div></td>
-      <td>390.000 VNĐ</td>
-      <td><a href="#"><img src="assets/editiconpng.png" width="30px"></a></td>
-    </tr>
-    <tr>
-      <td><input type="checkbox" name="all" id="all" checked></td>
-      <td><div><span>SO100003</span></div></td>
-      <td>10/02/2023</td>
-      <td>0912345678</td>
-      <td><div class="trangthai" style="border:solid black 1px; ;">Chờ xác nhận</div></td>
-      <td>390.000 VNĐ</td>
-      <td><a href="#"><img src="assets/editiconpng.png" width="30px"></a></td>
-    </tr>
-  </table>
-</div>
-<div><button class="xacnhan">Xác nhận đơn hàng</button></div>
+<div><button class="xacnhan" (click)="submitForm()">Xác nhận đơn hàng</button></div>
+
+
 
 
