--- a/Admin/src/app/quan-ly-don-hang/quan-ly-don-hang.component.css
+++ b/Admin/src/app/quan-ly-don-hang/quan-ly-don-hang.component.css
@@ -1,65 +1,4 @@
-h1,h4{
-  color: #E75C6B;
 
-  font-family: 'Montserrat', sans-serif;
-}
-h1{
-  font-size: 30px;
-}
-/* Tùy chỉnh CSS cho button */
-.btn button {
-  float: left;
-  border: solid black 1px;
-  margin-right: 20px;
-  background-color: rgb(228, 168, 168); /* màu nền */
-  color:black; /* màu chữ */
-  padding: 10px 20px; /* khoảng cách giữa nội dung và lề */
-  border: none; /* không có đường viền */
-  border-radius: 5px; /* bo tròn các góc */
-  cursor: pointer; /* trỏ tay khi di chuột vào button */
-}
-.btn button:hover{
-  background-color: #E75C6B;
-}
-
-/* Tùy chỉnh CSS cho input */
-.search input[type="text"] {
-  width: 200px; /* chiều rộng của input */
-  padding: 10px; /* khoảng cách giữa nội dung và lề */
-  border: 1px solid #ccc; /* đường viền mảnh */
-  border-radius: 5px; /* bo tròn các góc */
-}
-
-/* Tùy chỉnh CSS cho button */
-.search button {
-  background-color: white;
-  color: white; /* màu chữ */
-  padding: 10px 20px; /* khoảng cách giữa nội dung và lề */
-  border: none; /* không có đường viền */
-  border-radius: 5px; /* bo tròn các góc */
-  cursor: pointer; /* trỏ tay khi di chuột vào button */
-}
-.tren{
-  display: flex;
-  justify-content: center;
-}
-
-
-table{
-  border-spacing:15px;
-  text-align: center;
-}
-.tieude{
-  font-weight: bold;
-}
-.trangthai{
-  background-color: rgb(205, 202, 202);
-  font-weight: bold;
-  height: 40px;
-  padding-top: 10px;
-  border-radius: 15px;
-
-}
 .xacnhan{
   width: 250px;
   height: 50px;
@@ -77,7 +16,71 @@ table{
     font-size: 20px;
     float: right;
 }
-.main{
+
+h3{
+  color: #E75C6B;
+ font-weight: bold;
+}
+thead{
+  background-color: #E75C6B;
+  color: white;
+}
+.container{
+  font-family: 'Montserrat', sans-serif;
+}
+.btn{
+  background-color: #E75C6B;
+  color: white;
+}
+
+.header-box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-box h1 {
+  font-size: 28px;
+  font-weight: bold;
+  color: #E75C6B;
+}
+
+.header-box button {
+  padding: 15px 0;
+  border-radius: 10px;
+  color: #fff;
+  background-color: #E75C6B;
+  border: 1px solid #fff;
+  width: 25%;
+  transition: .3s linear;
+}
+
+.header-box button:hover {
+  background-color: #fff;
+  color: #E75C6B;
+  border-color: #E75C6B;
+}
+.fog {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.4);
   display: flex;
   justify-content: center;
+  align-items: center;
+}
+
+.form {
+  width: 50%;
+  max-height: 450px;
+  overflow-y: scroll;
+  background-color: #fff;
+  border-radius: 5px;
+  padding-bottom: 30px;
+}
+label{
+  font-weight: bold;
+  font-size: medium;
 }
