--- a/Admin/src/app/quan-ly-don-hang/quan-ly-don-hang.component.html
+++ b/Admin/src/app/quan-ly-don-hang/quan-ly-don-hang.component.html
@@ -12,6 +12,7 @@
     <div class="d-flex justify-content-between">
       <div class="sort-function">
         <select class="form-select">
+          <option value="" selected disabled>---  Sắp xếp theo  ---</option>
           <option *ngFor="let orderstatus of orderstatuss">  {{ orderstatus}}</option>
 
         </select>
