--- a/Client/src/app/list-product/list-product.component.css
+++ b/Client/src/app/list-product/list-product.component.css
@@ -130,7 +130,13 @@
   margin: 30px;
   margin-left: 400px;
 }
-.sotrang a{
+.active {
+  background-color: #f38a95;
+  color: #fff;
+  border-radius: 10px;
+}
+
+.sotrang p{
   text-decoration: none;
   font-size: 18px;
   margin: 0px 20px;
